--- a/android/app/src/main/assets/css/screen.css
+++ b/android/app/src/main/assets/css/screen.css
@@ -67,3 +67,54 @@ p {
   height: 200px;
   margin: 10px auto;
 }
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.modal .inner-modal {
+  width: 80%;
+  height: 400px;
+  background-color: #ffffff;
+  margin: 200px auto;
+  text-align: center;
+  border-radius: 5px;
+}
+.modal .inner-modal .imei-input {
+  width: 80%;
+  height: 40px;
+  border:1px solid #cccccc;
+  margin: 100px auto;
+}
+.modal .inner-modal .cancel-btn,.modal .inner-modal .confirm-btn {
+  display: inline-block;
+  width: 150px;
+  height: 40px;
+  line-height: 40px;
+  background-color: #f7f7f7;
+}
+.modal .inner-modal .confirm-btn {
+  background-color: #4c76df;
+  color: #ffffff;
+}
+.clear-storage {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: #f7f7f7;
+  padding: 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+/*  */
