--- a/android/app/src/main/assets/css/screen.css
+++ b/android/app/src/main/assets/css/screen.css
@@ -22,6 +22,7 @@ p {
 .left-video video {
   width: 100%;
   height: 100%;
+  -webkit-transform: translate3d(0, 0, 0);
 }
 .right-content {
   position: absolute;
